# light-llm

./: README.md  pyproject.toml
configs/: experiment_complex_attn.yaml  medium.yaml  small.yaml
configs/analyse/: example.yaml
configs/preprocess/: fineweb.yaml  wikipedia_en.yaml  wikipedia_multilang.yaml
configs/train/: medium.yaml  small-mha.yaml  small.yaml
docs/: analyse.md  export.md  install_notes.md  models.md  preprocess.md  run.md  tokenizers.md  train.md
src/light_llm/: __init__.py
src/light_llm/analysis/: __init__.py  analytics.py  config.py  graph.py
src/light_llm/data/: __init__.py  collator.py  dataset.py  hf_adapters.py  preprocess_config.py  shard_dataset.py
src/light_llm/models/: __init__.py
src/light_llm/models/transformer/: __init__.py  attention.py  blocks.py  config.py  ffn.py  model.py  norm.py  positional.py
src/light_llm/tokenizer/: __init__.py  base.py  bpe.py  char.py  hf.py
src/light_llm/tools/: __init__.py  analyse.py  export.py  preprocess.py  run.py  train.py
src/light_llm/training/: __init__.py  config.py  scheduler.py  trainer.py
tools/: analyse.py  export.py  preprocess.py  run.py  train.py
